<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">东江区工务局</string>
    <string name="head_title">东江区工务局</string><!--登陆界面-->
    <string name="head_content">工程数据管理平台</string><!--登陆界面-->
    <string name="main_title">东江区工务局工程数据管理平台</string>
    <string name="eim">(EIM)</string>
    <string name="app">wanvebotong</string>

    <string-array name="english_week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string name="list_dialog_title">Dynamic Update</string>

    <string name="func_dialog_title">Function</string>

    <string-array name="list_dialog_items">
        <item>Change week start with sun</item>
        <item>Change week start with mon</item>
        <item>Change week start with sat</item>
        <item>Change select mode：single/default</item>
        <item>Change month and week view with CustomView</item>
        <item>MonthViewShowMode：all</item>
        <item>MonthViewShowMode：only_current</item>
        <item>MonthViewShowMode：fix</item>
    </string-array>

    <string-array name="func_dialog_items">
        <item>Expand CalendarLayout</item>
        <item>Shrink CalendarLayout</item>
        <item>scrollToPre</item>
        <item>scrollToNext</item>
        <item>scrollToCurrent</item>
        <item>Limit calendar range</item>
        <item>Show range</item>
    </string-array>

    <!-- app layer && main -->
    <string name="label_name">旁站系统</string>
    <string name="app_version">V5.0.7</string>
    <string name="app_savepwd">记住密码</string>
    <string name="app_select_plat">选择平台</string>
    <string name="app_plat">用户名称</string>
    <string name="app_login">登录</string>
    <string name="app_hintpwd">密码不能为空</string>
    <string name="app_hintuser">请检查用户名。</string>

    <!-- device list -->
    <string name="dev_btnList">设备列表</string>
    <string name="dev_loading">请稍后</string>
    <string name="dev_loading_device">加载设备列表…</string>
    <string name="ck_num">序号</string>
    <string name="ck_time">时间</string>
    <string name="ck_dev">设备ID</string>
    <string name="ck_value">测量值</string>

    <string name="dev_RTVideo">实时视频</string>
    <string name="dev_RCVideo">录像回放</string>
    <string name="dev_RCPhoto">快照查询</string>
    <string name="dev_RTAlarmInfo">测控信息</string>
    <string name="dev_NetSwitchOut">开关输出</string>
    <string name="dev_NetSwitchIn">开关输入</string>

    <string name="btn_play_cam">开始预览</string>
    <string name="btn_check_cam">勾选要预览的设备</string>
    <string name="msg_selectfirst">请先选择摄像头</string>
    <string name="msg_maxselect">最多只能支持16路视频.</string>
    <string name="msg_loginfailed">登录失败！错误码:</string>
    <string name="unknowndev">其他类型设备</string>

    <!-- file list activity-->
    <string name="msg_nophotos">无快照文件</string>
    <string name="msg_norecords">无录像文件</string>
    <string name="file_openwith">打开方式</string>
    <string name="file_innerplayer">自带播放器</string>
    <string name="file_outerplayer">第三方播放器</string>

    <!-- image display activity -->
    <string name="msg_firstfile">已经是第一张</string>
    <string name="msg_lastfile">已经是最后一张</string>

    <!-- ip configure -->
    <string name="ipconf_plat">平台</string>
    <string name="ipconf_addr">地址</string>
    <string name="ipconf_port">端口</string>
    <string name="ipconf_user">用户</string>
    <string name="ipconf_pwd">密码</string>
    <string name="ipconf_tosave">录像、图片存储位置</string>
    <string name="ipconf_sdcard">外部存储卡</string>
    <string name="ipconf_phone">手机内存</string>
    <string name="ipconf_btnsave">保存</string>
    <string name="ipconf_btncancel">取消</string>

    <!-- play table -->
    <string name="play_btn_openadio">音频</string>
    <string name="play_btn_pause">暂停</string>
    <string name="play_btn_play">播放</string>
    <string name="play_btn_back">退出</string>
    <string name="msg_wait">请稍后…</string>
    <string name="msg_opening">正在打开</string>
    <string name="msg_closing">正在关闭</string>
    <string name="msg_refreshing">正在刷新</string>

    <!-- title bar -->
    <string name="title_hintsearch">搜索摄像头</string>
    <string name="login_btn">登录</string>
    <string name="add_btn">添加</string>

    <!-- warining text -->
    <string name="war_delete">确认删除？</string>
    <string name="war_delete_succeed">已删除！</string>
    <string name="war_delete_yes">确认</string>
    <string name="war_delete_no">取消</string>

    <string name="list_btn">平台列表</string>
    <string name="exit_btn">退出</string>
    <string name="select_btn">选择</string>
    <string name="del_btn">删除</string>
    <string name="modify_btn">修改</string>
    <string name="code_btn">编码参数</string>
    <string name="video_btn">视频参数</string>
    <string name="open_btn">打开</string>
    <string name="back_btn">返回</string>
    <string name="tr_pal">PAL</string>
    <string name="tr_ntsc">NTSC</string>
    <string name="button_videoconfig">视频参数</string>
    <string name="button_videoencode">编码参数</string>
    <string name="button_ptz">云台参数</string>
    <string name="delete">警告：
	                                                                     确认删除会丢失所有的数据！</string>
    <string name="help_text">\n
	    1、单击[选择平台]可以进行平台信息设置和选择。\n
	    2、单击对应的平台后面的扩展图标可以进行平台的修改和删除，再单击一次会收回扩展。\n
	    3、在平台列表点击对应平台后会选中并返回第一页，然后才可进行登录操作，\n
	    4、登录后在搜索栏可以搜索列表中的摄像头，不仅支持名字匹配，还支持顺序匹配。比如列表中有1000个设备，则输入[0]会显示全部设备，输入[01]会显示前面10个，输入[05]会显示第50-59个，依此类推。\n
	    5、搜索栏下一排为监控选择，可结合搜索操作。\n
	    6、实时监控开启后可以控云台(须前端支持)。</string>


    <string name="btn_my_loc">重新定位</string>
    <string name="btn_add">添加</string>
    <string name="btn_del">删除</string>
    <string name="btn_stop">停止测试</string>
    <string name="set_name">取个名字吧</string>
    <string name="placeholder"></string>
</resources>
