<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/LinearLayout01"  
    android:orientation="vertical"  
    android:layout_width="fill_parent"    
    android:layout_height="fill_parent" >  

   <LinearLayout 
        style="@android:style/ButtonBar"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
 		android:orientation = "vertical" 
 		android:gravity="center_horizontal"
 		android:background="#44b2d2"
 		android:layout_centerInParent="true"> 		
 		<ImageView 
 		    android:src="@drawable/warn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="0dip"/> 		
 		<TextView 
 		    android:id="@+id/tv_delete"
 		    android:text="@string/delete"
        	android:textColor="#FFFF00"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"/> 		
 		<LinearLayout 
 		    style="@android:style/ButtonBar"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent" 
            android:layout_height="48dp"
            android:background="#00000000"
            android:orientation = "horizontal" > 			
	        <Button 
	            android:id="@+id/delete_yes" 
	            android:text ="@string/war_delete_yes"
	            android:layout_width="0dip" 
	            android:layout_height="fill_parent"
	            android:layout_weight ="1"/>
	        <Button 
	            android:id="@+id/delete_no"
	            android:text ="@string/war_delete_no" 		            
	            android:layout_width="0dip" 
	            android:layout_height="fill_parent"
	            android:layout_weight ="1"/>
 		
 		</LinearLayout>
 		
 	</LinearLayout>      
  		
</RelativeLayout> 