<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/empty2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <View
        android:layout_marginTop="50dp"
        android:layout_below="@+id/empty2"
        android:id="@+id/empty"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_my_loc" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_add" />

        <Button
            android:id="@+id/del"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_del" />

        <Button
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="onClick"
            android:text="@string/btn_stop" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/empty"
        android:layout_alignParentTop="true">

        <com.tencent.tencentmap.mapsdk.map.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/me"
            android:contentDescription="@string/placeholder" />


        <ImageView
            android:id="@+id/my_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:onClick="onClick"
            android:padding="10dp"
            android:src="@drawable/dw"
            android:textColor="#fff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_container"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@id/empty"
        android:background="@color/bottom">

        <TextView
            android:id="@+id/tvPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="10dp"
            android:padding="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tvPlace"
            android:background="#c5c5c5" />

        <RelativeLayout
            android:id="@+id/rlChun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPlace"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvChun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvChance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/bt_daka2"
                android:padding="8dp"
                android:text="获取唇语验证码"
                android:textColor="#fff" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/rlChun"
            android:background="#c5c5c5" />

        <Button
            android:id="@+id/btDaKa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlChun"
            android:layout_margin="16dp"
            android:background="@drawable/bt_daka"
            android:text="视频打卡"
            android:textColor="#fff"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>